--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
   </properties>
   <dependencyManagement>
     <dependencies>
+    <dependency>
+      <groupId>com.kumuluz.ee</groupId>
+      <artifactId>kumuluzee-bom</artifactId>
+      <version>4.1.0</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>
+      <dependency>
+        <groupId>com.kumuluz.ee.rest</groupId>
+        <artifactId>kumuluzee-rest-core</artifactId>
+        <version>2.0.1</version>
+      </dependency>
       <dependency>
         <groupId>${quarkus.platform.group-id}</groupId>
         <artifactId>${quarkus.platform.artifact-id}</artifactId>
@@ -77,6 +89,8 @@
       <artifactId>commons-math3</artifactId>
       <version>3.6.1</version>
     </dependency>
+
+
 
 
 
